--- a/src/main/java/vista/EmpleadorVista.form
+++ b/src/main/java/vista/EmpleadorVista.form
@@ -68,18 +68,6 @@
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="txtFechaNacimiento" min="-2" pref="147" max="-2" attributes="0"/>
                                   </Group>
-                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="cbCargo" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="cbEmpresa" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
                               </Group>
                               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -100,6 +88,17 @@
                               <Component id="btnActualizar" min="-2" pref="143" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnPdf" min="-2" pref="143" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel11" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="cbCargo" pref="229" max="32767" attributes="0"/>
+                                  <Component id="cbEmpresa" alignment="1" max="32767" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                   </Group>
@@ -152,7 +151,7 @@
                   <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbEmpresa" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbCargo" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -168,7 +167,7 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="49" max="32767" attributes="0"/>
+              <EmptySpace pref="55" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -244,7 +243,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCedulaActionPerformed"/>
@@ -255,7 +253,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jTextField3"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtFechaNacimiento">
@@ -263,7 +260,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jTextField4"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNombres">
@@ -271,7 +267,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
@@ -295,7 +290,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jTextField5"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtCorreo">
@@ -303,7 +297,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jTextField6"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel10">
@@ -356,22 +349,7 @@
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="14">
-            <StringItem index="0" value="Administraci&#xf3;n"/>
-            <StringItem index="1" value="Direcci&#xf3;n de Empresas"/>
-            <StringItem index="2" value="Comercio"/>
-            <StringItem index="3" value="Comunicaci&#xf3;n Corporativa"/>
-            <StringItem index="4" value="Contabilidad"/>
-            <StringItem index="5" value="Criminolog&#xed;a"/>
-            <StringItem index="6" value="Derecho"/>
-            <StringItem index="7" value="Desarrolo de Software"/>
-            <StringItem index="8" value="Dise&#xf1;o Gr&#xe1;fico"/>
-            <StringItem index="9" value="Enfermer&#xed;a"/>
-            <StringItem index="10" value="Fisioterapia"/>
-            <StringItem index="11" value="Marketing"/>
-            <StringItem index="12" value="Psicolog&#xed;a"/>
-            <StringItem index="13" value="Sociolog&#xed;a"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <Events>
@@ -401,22 +379,7 @@
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="14">
-            <StringItem index="0" value="Administraci&#xf3;n"/>
-            <StringItem index="1" value="Direcci&#xf3;n de Empresas"/>
-            <StringItem index="2" value="Comercio"/>
-            <StringItem index="3" value="Comunicaci&#xf3;n Corporativa"/>
-            <StringItem index="4" value="Contabilidad"/>
-            <StringItem index="5" value="Criminolog&#xed;a"/>
-            <StringItem index="6" value="Derecho"/>
-            <StringItem index="7" value="Desarrolo de Software"/>
-            <StringItem index="8" value="Dise&#xf1;o Gr&#xe1;fico"/>
-            <StringItem index="9" value="Enfermer&#xed;a"/>
-            <StringItem index="10" value="Fisioterapia"/>
-            <StringItem index="11" value="Marketing"/>
-            <StringItem index="12" value="Psicolog&#xed;a"/>
-            <StringItem index="13" value="Sociolog&#xed;a"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <Events>
