--- a/src/main/java/vista/MenuVista.form
+++ b/src/main/java/vista/MenuVista.form
@@ -50,10 +50,13 @@
             <Property name="text" type="java.lang.String" value="Examen"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
+            <MenuItem class="javax.swing.JMenuItem" name="jdpPedidos">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Grupo2"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jdpPedidosActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
